deploy/retrieveUnpackaged/objects/Phased_Delayed_Deployments__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <defaultValue>Today() + 90</defaultValue>
        <description>To be used with Projects</description>
        <inlineHelpText>Use this field to identify when Projects will expire.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Phased_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use the Project checkbox when the opportunity is for a project.</description>
        <inlineHelpText>Use the Project checkbox when the opportunity is for a project.</inlineHelpText>
        <label>Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Phased/Delayed Deployments</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SolutionEngineer</fullName>
        <filterScope>Queue</filterScope>
        <label>Solution Engineer</label>
        <queue>Solution Engineer</queue>
    </listViews>
    <nameField>
        <label>Phased/Delayed Deployments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phased/Delayed Deployments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>